# TodoCLI

./: Cargo.toml  README.md  makefile
src/: commands.rs  db.rs  main.rs  models.rs
